# spotdl-lean

./: .gitignore  flake.nix  pyproject.toml  test.py
spotdl/: __init__.py
spotdl/download/: downloader.py  progress_handler.py
spotdl/types/: song.py
spotdl/utils/: ffmpeg.py  spotify.py
