[project]
name = "spotdl-lean"
version = "4.2.11"
description = "Download your Spotify playlists and songs along with album art and metadata"
license = {text = "MIT"}
authors = [
    {name = "spotDL Team", email = "spotdladmins@googlegroups.com"}
]
maintainers = [
    {name = "xnetcat", email = "xnetcat.dev@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9,<3.14"
keywords = ["spotify", "downloader", "spotdl", "music"]
classifiers = [
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Utilities",
]

dependencies = [
    "spotipy>=2.24.0,<3.0.0",
    "ytmusicapi>=1.3.2,<2.0.0; python_version<'3.10'",
    "ytmusicapi>=1.4.1,<2.0.0; python_version>='3.10'",
    "pytube>=15.0.0,<16.0.0",
    "yt-dlp>=2025.1.15",
    "mutagen>=1.47.0,<2.0.0",
    "rich>=13.9.4,<14.0.0",
    "beautifulsoup4>=4.12.3,<5.0.0",
    "requests>=2.32.3,<3.0.0",
    "rapidfuzz>=3.10.1,<4.0.0",
    "python-slugify[unidecode]>=8.0.4,<9.0.0",
    "uvicorn>=0.23.2,<1.0.0",
    "pydantic>=2.9.2,<3.0.0",
    "fastapi>=0.103.0,<1.0.0",
    "platformdirs>=4.3.6,<5.0.0",
    "pykakasi>=2.3.0,<3.0.0",
    "syncedlyrics>=1.0.1,<2.0.0",
    "soundcloud-v2>=1.6.0,<2.0.0",
    "websockets>=14.1,<15.0.0",
    "editables>=0.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3,<9.0.0",
    "pytest-mock>=3.14.0,<4.0.0",
    "pyfakefs>=5.7.1,<6.0.0",
    "pytest-cov>=6.0.0,<7.0.0",
    "pytest-subprocess>=1.5.2,<2.0.0",
    "pytest-asyncio>=0.21.1,<1.0.0",
    "mypy>=1.13.0,<2.0.0",
    "pylint>=3.3.1,<4.0.0",
    "black>=24.10.0,<25.0.0",
    "mdformat-gfm>=0.3.5,<1.0.0",
    "types-orjson>=3.6.2,<4.0.0",
    "types-python-slugify>=8.0.2.20240310",
    "types-requests==2.31.0.6",
    "types-setuptools>=75.5.0.20241116",
    "types-toml>=0.10.8.7,<1.0.0",
    "types-ujson>=5.10.0.20240515",
    "pyinstaller>=6.11.1,<7.0.0",
    "mkdocs>=1.6.1,<2.0.0",
    "isort>=5.13.2,<6.0.0",
    "dill>=0.3.7,<1.0.0",
    "mkdocs-material>=9.5.44,<10.0.0",
    "mkdocstrings>=0.26.0,<1.0.0",
    "mkdocstrings-python>=1.12.2,<2.0.0",
    "pymdown-extensions>=10.12,<11.0.0",
    "mkdocs-gen-files>=0.5.0,<1.0.0",
    "mkdocs-literate-nav>=0.6.0,<1.0.0",
    "mkdocs-section-index>=0.3.5,<1.0.0",
    "vcrpy>=6.0.2,<7.0.0",
    "pytest-recording>=0.13.1,<1.0.0",
]

[project.scripts]
spotdl = "spotdl:console_entry_point"

[project.urls]
Homepage = "https://github.com/spotDL/spotify-downloader/"
Repository = "https://github.com/spotDL/spotify-downloader.git"
Documentation = "https://spotdl.rtfd.io/en/latest/"

[tool.isort]
profile = "black"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pylint.format]
limit-inference-results = 0
fail-under = 9

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "vcr",
]
